<resources>
    <string name="app_name">Secure Notes</string>
    <string name="signup_page_header">Enter details below to register</string>
    <string name="full_name">Full Name</string>
    <string name="new_username_signup">Username</string>
    <string name="password_signup">Password</string>
    <string name="register_signup">Create Account</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="btn_back">Already a member? Login</string>
    <string name="tv_btn_signup_text">No Account yet? Create one</string>
    <string name="exit_app_dialog_title_login">EXIT APPLICATION</string>
    <string name="exit_app__dialog_detail_login">Are you sure you want to exit application?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="action_menu_logout">Logout</string>
    <string name="alert_text_login">Invalid Credentials. Please try again!</string>
    <string name="empty_string" />
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
